--- a/week02_bottom_navigation/BottomNavigation Template/app/src/main/AndroidManifest.xml
+++ b/week02_bottom_navigation/BottomNavigation Template/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="gachon.third.umc.android" >
+    package="gachon.third.umc.android">
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Instagram" >
-
+        android:theme="@style/Theme.Instagram">
+        <activity
+            android:name=".SginPwdActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SginNameActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SginEmailActivity"
+            android:exported="false" />
         <activity
             android:name=".StoryviewActivity"
             android:exported="false" />
@@ -21,7 +29,7 @@
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
