--- a/week02_bottom_navigation/BottomNavigation Template/app/build.gradle
+++ b/week02_bottom_navigation/BottomNavigation Template/app/build.gradle
@@ -47,4 +47,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //레트로핏
+    def retrofit_version = "2.8.1"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    //gson 컨버터
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    //이미지 url
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
